# traffic-sim-svc

./: .env example  Cargo.toml  README.md
schemas/: simulation_time_mgmt.avsc
src/: consumer.rs  main.rs  move_listener.rs  simulation_control.rs  simulation_time.rs  utils.rs
